wallet banner product-offer

--- a/views/admin/Sales-Report.ejs
+++ b/views/admin/Sales-Report.ejs
@@ -139,7 +139,7 @@
 
   .nav-tabs:not(.nav-tabs-neutral)>.nav-item>.nav-link.active {
     box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.3);
-    border: 1px  solid gray;
+    border: 1px solid gray;
   }
 
   .card .nav-tabs {
@@ -186,7 +186,7 @@
   }
 
   .card {
- 
+
     border-radius: 0.1875rem;
     display: inline-block;
     position: relative;
@@ -328,7 +328,7 @@
               <a class="nav-link" data-toggle="tab" href="#settings1" role="tab">Every Month</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#Daily" role="tab">Every Month</a>
+              <a class="nav-link" data-toggle="tab" href="#Daily" role="tab">Day wise</a>
             </li>
           </ul>
         </div>
@@ -474,7 +474,8 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <button onclick="everyMonth()" class="btn btn-outline-primary btn-round btn-sm float-right">
+
+                    <button onclick="everyMonth('<%-monthWise?.data%>')" class="btn btn-outline-primary btn-round btn-sm float-right">
                       Download PDF
                     </button>
                     <button onclick="everyMonthexc()" class="btn btn-outline-primary btn-round btn-sm float-right">
@@ -483,7 +484,7 @@
                     <h4 class="card-title">Every Month Sales</h4>
 
                     <div class="table-responsive pt-3">
-                      <table class="table table-bordered">
+                      <table class="table table-bordered" id="my-table">
                         <thead>
                           <tr>
                             <th>Month</th>
@@ -518,19 +519,19 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <button onclick="everyMonth()" class="btn btn-outline-primary btn-round btn-sm float-right">
+                    <button onclick="everyDay()" class="btn btn-outline-primary btn-round btn-sm float-right">
                       Download PDF
                     </button>
-                    <button onclick="everyMonthexc()" class="btn btn-outline-primary btn-round btn-sm float-right">
+                    <button onclick="everyDayexc()" class="btn btn-outline-primary btn-round btn-sm float-right">
                       Download exel sheet
                     </button>
-                    <h4 class="card-title">Daily</h4>
+                    <h4 class="card-title">Day wise </h4>
 
                     <div class="table-responsive pt-3">
-                      <table class="table table-bordered">
+                      <table class="table table-bordered" id="everyDay-table">
                         <thead>
                           <tr>
-                            <th>Month</th>
+                            <th>Day</th>
                             <th>Total Revenue</th>
                             <th>No of Product Sold</th>
                             <th>No of orders</th>
@@ -539,14 +540,6 @@
                         </thead>
                         <tbody>
 
-                          <% monthWise?.data?.forEach((element,index)=> { %>
-                          <tr>
-                            <td><%=index %> </td>
-                            <td>Rs.<%-element?.total %></td>
-                            <td><%- element?.orders %> </td>
-                            <td><%-element?.count %> </td>
-                          </tr>
-                          <% })%>
                         </tbody>
                       </table>
                     </div>
@@ -633,4 +626,25 @@
     }
 
   }
+
+  function everyMonth(data) {
+    var doc = new jsPDF()
+
+    doc.autoTable({
+      html: '#my-table'
+    })
+
+    doc.save('Monthly Report.pdf')
+  }
+
+  function everyDay(data) {
+    var doc = new jsPDF()
+
+    doc.autoTable({
+      html: '#everyDay-table'
+    })
+
+    doc.save('Every Day Report.pdf')
+  }
+  
 </script>
