--- a/views/partials/admin_sidebar.ejs
+++ b/views/partials/admin_sidebar.ejs
@@ -15,7 +15,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin/users">
-          <i class="icon-columns ti-user mr-3"></i>
+          <i class="icon-head menu-icon"></i>
           <span class="menu-title"> Users Mangagement</span>
         </a>
       </li>
@@ -28,30 +28,30 @@
       <li class="nav-item">
         <a class="nav-link" href="/admin/orders">
           <i class="icon-grid-2 menu-icon"></i>
-          <span class="menu-title">Order  Management</span>
+          <span class="menu-title">Order Management</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/coupons">
+          <i class="mdi mdi-chart-areaspline"></i>
+          <span class="menu-title ml-3">Coupon Management</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin/sales-report">
-          <i class="icon-grid-2 menu-icon"></i>
-          <span class="menu-title">Sales Report</span>
+          <i class="mdi mdi-chart-areaspline"></i>
+          <span class="menu-title ml-3">Sales Report</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-          <i class="icon-head menu-icon"></i>
-          <span class="menu-title">User Pages</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-          <i class="icon-ban menu-icon"></i>
-          <span class="menu-title">Error pages</span>
+        <a class="nav-link" href="/admin/banners">
+          <i class="mdi mdi-compare"></i>
+          <span class="menu-title ml-3">Banner Management</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="pages/documentation/documentation.html">
-          <i class="icon-paper menu-icon"></i>
+          <i class="icon-head menu-icon"></i>
           <span class="menu-title">Documentation</span>
         </a>
       </li>
