--- a/views/partials/header-main.ejs
+++ b/views/partials/header-main.ejs
@@ -33,7 +33,7 @@
                             <ul>
                                 <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li>
-                                <li><a href="/account"><i class="icon-user"></i><%= locals.userName %> </a></li>
+                                <li><a href="/account"><i class="icon-user"></i><%= locals.userName %></a></li>
                                 <li><a href="/logout">logout</a></li>
                             </ul>
                         </li>
@@ -63,7 +63,7 @@
                                 <a href="/shop">Shop</a>
                             </li>
                             <li>
-                                <a href="single-product">Product</a>
+                                <a href="/category">Category</a>
                             </li>
                             <li>
                                 <a href="/account">Account</a>
