--- a/views/admin-2-layout.ejs
+++ b/views/admin-2-layout.ejs
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png">
   <link rel="icon" type="image/png" href="/img/favicon.png">
   <title>
-    Soft UI Dashboard by Creative Tim
+    RIG-X- Admin-Panel
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -48,5 +48,5 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="/assets/js/soft-ui-dashboard.min.js?v=1.0.6"></script>
-  
+
 </html>
