--- a/views/admin/admin_page_new.ejs
+++ b/views/admin/admin_page_new.ejs
@@ -572,7 +572,7 @@
         <div class="col-lg-7">
           <div class="card z-index-2">
             <div class="card-header pb-0">
-              <h6>Sales overview</h6>
+              <h6>Monthly Sales overview</h6>
               <p class="text-sm">
                 <i class="fa fa-arrow-up text-success"></i>
                 <span class="font-weight-bold">4% more</span> <% let date = new Date() ; let year = new Date().getFullYear() %> in <%= year-1 %>
@@ -597,7 +597,7 @@
             </div>
             <div class="card-body p-3">
               <div class="chart">
-                <canvas id="chart-line-daily" class="chart-canvas" height="300"></canvas>
+                <canvas id="chart-line-years" class="chart-canvas" height="300"></canvas>
               </div>
             </div>
           </div>
@@ -606,15 +606,15 @@
         <div class="col-lg-7  mt-3">
           <div class="card z-index-2">
             <div class="card-header pb-0">
-              <h6>Sales overview</h6>
+              <h6>Daily Sales overview</h6>
               <p class="text-sm">
                 <i class="fa fa-arrow-up text-success"></i>
-                <span class="font-weight-bold">4% more</span> 2022
+                <span class="font-weight-bold">4% more</span> 
               </p>
             </div>
             <div class="card-body p-3">
               <div class="chart">
-                <canvas id="chart-line-weekly" class="chart-canvas" height="300"></canvas>
+                <canvas id="chart-line-daily" class="chart-canvas" height="300"></canvas>
               </div>
             </div>
           </div>
