--- a/views/admin/category-banner-list.ejs
+++ b/views/admin/category-banner-list.ejs
@@ -4,46 +4,39 @@
       <h4 class="card-title">Products </h4>
       <p class="card-description">
       </p>
-      <a type="button" href="/admin/add-products" class="btn btn-outline-info btn-sm btn-icon-text ti-upload btn-icon-prepend">
-        Add New Products
-      </a>
+      <% if(data.length <=3 ) {%>
+        <p class="text-danger">Maximum no of Category banner is 3 please Delete existing banner or edit the Existing banner</p>
+      <% }else{ %>
+        <a type="button" href="/admin/add-category-banner" class="btn btn-outline-info btn-sm btn-icon-text ti-upload btn-icon-prepend">
+          Add New Banner
+        </a>
+      <% } %>
+
       <div class="table-responsive pt-3">
         <table class="table table-bordered">
           <thead>
             <tr>
               <th># </th>
               <th>Image</th>
-              <th>Name</th>
-              <th>Stock</th>
-              <th>Offer Price</th>
-              <th>Market Price </th>
-              <th> Edit/Delete</th>
+              <th>Category</th>
+              <th>Edit/Delete</th>
             </tr>
           </thead>
           <tbody>
-            <% products.forEach((products,index)=>{ %>
+            <% data.forEach((elements,index)=>{  %>
             <tr>
               <td><%- index+1 %></td>
               <td>
-                <img src=/product-images/<%=products._id %>0.jpg alt="img goes here">
+                <img src="/banner-images/<%=elements._id %>.jpg" alt="">
               </td>
+              
+              <td><%- elements.category %></td>
               <td>
-                <%- products.name %></td>
-              <td>
-                <%- products.quantity %></td>
-              <td>
-                <%- products.offerPrice %></td>
-              <td>
-                <%- products.marketPrice %>
-              </td>
-              <td>
-                <%- products.percent %>%</td>
-              <td>
-                <a type="button" href=./edit-products/<%=products._id%> class="btn btn-outline-info btn-sm btn-icon-text ti-file btn-icon-append">
+                <a type="button" href='/admin/edit-category-banner/<%=elements._id%>' class="btn btn-outline-info btn-sm btn-icon-text ti-file btn-icon-append">
                   Edit
                 </a>
 
-                <a type="button" class="btn btn-outline-danger btn-sm btn-icon-text ti-alert btn-icon-prepend" onclick="toast('<%- products._id%>')">
+                <a type="button" class="btn btn-outline-danger btn-sm btn-icon-text ti-alert btn-icon-prepend" onclick="toast('<%- elements._id%>')">
                   Delete
                 </a>
               </td>
@@ -57,7 +50,7 @@
 </div>
 
 <script>
-  function toast(prodId) {
+  function toast(Id) {
 
     Swal.fire({
       title: 'Are you sure?',
@@ -70,7 +63,7 @@
     }).then((result) => {
       if (result.isConfirmed) {
         $.ajax({
-          url: '/admin/delete-products/' + prodId,
+          url: '/admin/delete-category-banner/' + Id,
           method: 'delete',
           success: (response) => {
             if (response.status) {
