--- a/views/admin/edit-products.ejs
+++ b/views/admin/edit-products.ejs
@@ -1,100 +1,128 @@
 <div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h3 class="card-title">Edit Products</h3>
-            <p></p>
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title">Edit Products</h3>
+      <p></p>
 
-            <br>
+      <br>
 
-            <form class="forms-sample" method="post" action="/admin/edit-products/<%= products._id  %> "
-                enctype="multipart/form-data">
+      <form class="forms-sample" method="post" action="/admin/edit-products/<%= products._id  %> " enctype="multipart/form-data">
 
-                <div class="row">
-                    <div class="form-group col-md-5">
-                        <label for="exampleInputName1">Name</label>
-                        <input type="text" class="form-control" id="exampleInputName1" placeholder="name" name="name"
-                            value="<%= products.name  %>">
-                    </div>
+        <div class="row">
+          <div class="form-group col-md-5">
+            <label for="exampleInputName1">Name</label>
+            <input type="text" class="form-control" id="exampleInputName1" placeholder="name" name="name" value="<%= products.name  %>">
+          </div>
 
-                    <div class="form-group col-md-5">
-                        <label for="exampleSelectGender">Category</label>
-                        <select class="form-control" name="category">
-                            <% category.forEach((categoryn)=>{ %>
-                                <option class="text-dark">
-                                    <%-categoryn.name%>
-                                </option>
-                                <% }) %>
-                        </select>
-                    </div>
+          <div class="form-group col-md-5">
+            <label for="exampleSelectGender">Category</label>
+            <select class="form-control" name="category">
+              <% category.forEach((categoryn)=>{ %>
+              <option class="text-dark">
+                <%-categoryn.name%>
+              </option>
+              <% }) %>
+            </select>
+          </div>
 
-                    <div class="form-group col-md-5">
-                        <label for="exampleInputPassword4">Price</label>
-                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="Price"
-                            name="price" value="<%= products.price  %>">
-                    </div>
+          <div class="form-group col-md-5">
+            <div class="d-flex">
+              <label for="exampleInputPassword4" class="w-25">Market Price</label>
+              <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
+            </div>
+            <input type="number" autocomplete="off" class="form-control" id="marketPrice" placeholder="MarketPrice" value="<%= products.marketPrice  %>" name="marketPrice" required>
+          </div>
 
-                    <div class="form-group col-md-5">
-                        <label for="exampleInputPassword4">Market Price</label>
-                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="Market Price"
-                            name="marketPrice" value="<%= products.marketPrice  %>">
-                    </div>
+          <div class="form-group col-md-5">
+            <div class="d-flex">
+              <label for="exampleInputPassword4" class="w-25">Offer Percent</label>
+              <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
+            </div>
+            <input type="number" autocomplete="off" class="form-control" id="percentVal" placeholder="Percent" onfocusout="calcOffer(this)" value="<%= products.percent  %>" name="percent" required>
+          </div>
 
-                    <div class="form-group col-md-5">
-                        <label for="exampleInputPassword4">Quantity</label>
-                        <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="quantity"
-                            name="quantity" value="<%= products.quantity %>">
-                    </div>
+          <div class="form-group col-md-5">
+            <div class="d-flex">
+              <label for="exampleInputPassword4" class="w-25">Offer Price</label>
+              <p id="err" class="text-danger d-flex justify-content-end w-75"></p>
+            </div>
+            <input type="number" autocomplete="off" class="form-control" id="offerPrice" placeholder="Price" name="offerPrice" value="<%= products.offerPrice  %>" readonly="readonly" required>
+          </div>
 
-
-                    <div class="form-group col-md-10">
-                        <label for="exampleTextarea1">Description</label>
-                        <textarea class="form-control" id="exampleTextarea1" rows="5"
-                            name="description"><%= products.description%></textarea>
-                    </div>
-
-                    <div class="form-group col-md-5">
-                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
-                            id="imgView">
-                        <label for="image">Image</label>
-                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
-                    </div>
-
-                    <div class="form-group col-md-5">
-                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
-                            id="imgView">
-                        <label for="image">Image</label>
-                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
-                    </div>
-
-                    <div class="form-group col-md-5">
-                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
-                            id="imgView">
-                        <label for="image">Image</label>
-                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
-                    </div>
-
-                    <div class="form-group col-md-5">
-                        <img src="/product-images/<%- products._id %>.jpg" alt="" style="width: 75px; height: 75px;"
-                            id="imgView">
-                        <label for="image">Image</label>
-                        <input type="file" name="image" class="form-control" onchange="viewImage(event)">
-                    </div>
+          <div class="form-group col-md-5">
+            <label for="exampleInputPassword4">Quantity</label>
+            <input type="tel" class="form-control" id="exampleInputPassword4" placeholder="quantity" name="quantity" value="<%= products.quantity %>">
+          </div>
 
 
-                    <button type="submit" class="btn btn-primary ml-3 mr-2 col-md-2">Submit</button>
-                    <button class="btn btn-light">Cancel</button>
-                </div>
-            </form>
+          <div class="form-group col-md-10">
+            <label for="exampleTextarea1">Description</label>
+            <textarea class="form-control" id="exampleTextarea1" rows="5" name="description"><%= products.description%></textarea>
+          </div>
+
+          <div class="form-group col-md-5">
+            <img src="/product-images/<%- products._id %>0.jpg" alt="" style="width: 75px; height: 75px;" id="imgView1">
+            <label for="image">Image</label>
+            <input type="file" name="image" class="form-control" onchange="viewImage1(event)">
+          </div>
+
+          <div class="form-group col-md-5">
+            <img src="/product-images/<%- products._id %>1.jpg" alt="" style="width: 75px; height: 75px;" id="imgView2">
+            <label for="image">Image</label>
+            <input type="file" name="image" class="form-control" onchange="viewImage2(event)">
+          </div>
+
+          <div class="form-group col-md-5">
+            <img src="/product-images/<%- products._id %>2.jpg" alt="" style="width: 75px; height: 75px;" id="imgView3">
+            <label for="image">Image</label>
+            <input type="file" name="image" class="form-control" onchange="viewImage3(event)">
+          </div>
+
+          <div class="form-group col-md-5">
+            <img src="/product-images/<%- products._id %>3.jpg" alt="" style="width: 75px; height: 75px;" id="imgView4">
+            <label for="image">Image</label>
+            <input type="file" name="image" class="form-control" onchange="viewImage4(event)">
+          </div>
+
+
+          <button type="submit" class="btn btn-primary ml-3 mr-2 col-md-2">Submit</button>
+          <button class="btn btn-light">Cancel</button>
         </div>
+      </form>
     </div>
+  </div>
 </div>
 
+<script defer src="https://cdn.crop.guide/loader/l.js?c=LBSDQS"></script>
 
 
 <script>
+  function calcOffer(elem) {
+    let Mktprice = elem.parentElement.parentElement.querySelector('#marketPrice').value.trim()
+    let Percent = elem.value
 
-function viewImage(event){
-    document.getElementById('imgView').src=URL.createObjectURL(event.target.files[0])
-}
+    let offerPrice = (Mktprice - (Mktprice * (Percent / 100)))
+    offerPrice = Math.round(offerPrice)
 
+    let price = document.getElementById('offerPrice')
+    console.log(offerPrice);
+
+    price.value = offerPrice
+  }
+
+  function viewImage1(event) {
+    document.getElementById('imgView1').src = URL.createObjectURL(event.target.files[0])
+  }
+
+  function viewImage2(event) {
+    document.getElementById('imgView2').src = URL.createObjectURL(event.target.files[0])
+  }
+
+  function viewImage3(event) {
+    document.getElementById('imgView3').src = URL.createObjectURL(event.target.files[0])
+  }
+
+  function viewImage4(event) {
+    document.getElementById('imgView4').src = URL.createObjectURL(event.target.files[0])
+  }
 </script>
