--- a/views/admin/orderViewMore.ejs
+++ b/views/admin/orderViewMore.ejs
@@ -184,7 +184,7 @@
 
 
                                   <div class="d-flex">
-                                    <img class="mx-5 mt-2" style="width: 100px; height:100px; object-fit:contain" src="/product-images/<%= element?.orders?.productsDetails[i]?.img[0] %>" alt="">
+                                    <img class="mx-5 mt-2" style="width: 100px; height:100px; object-fit:contain" src="/product-images/<%= element?.orders?.productsDetails[i]?._id %>0.jpg" alt="">
                                     <div class="d-flex-column">
                                       <div class="mt-2" style="font-size: large;"><span class="px-2" style="color: #fb7d00; font-weight: 500;">Rs:
                                           <%=element.orders.productsDetails[i].productsPrice %>
