--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -27,7 +27,7 @@
                 <a class="nav-link" id="tab-orders-link" data-toggle="tab" href="#tab-orders" role="tab" aria-controls="tab-orders" aria-selected="false">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="tab-downloads-link" data-toggle="tab" href="#tab-downloads" role="tab" aria-controls="tab-downloads" aria-selected="false">Downloads</a>
+                <a class="nav-link" id="tab-downloads-link" data-toggle="tab" href="#tab-downloads" role="tab" aria-controls="tab-downloads" aria-selected="false">Wallet</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address" role="tab" aria-controls="tab-address" aria-selected="false">Adresses</a>
@@ -56,8 +56,11 @@
               </div><!-- .End .tab-pane -->
 
               <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
-                <p>No downloads available yet.</p>
-                <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="icon-long-arrow-right"></i></a>
+                <div class="card mx-auto" style="width: 40rem;" >
+                  <div class="card-body">
+                    <h4 class="card-text">Wallet balance : Rs.<%= walletBalance %> </h4>
+                  </div>
+                </div>
               </div><!-- .End .tab-pane -->
 
               <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
