--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -29,7 +29,7 @@
                     <div class="product">
                       <figure class="product-media">
                         <a href="#">
-                          <img src="product-images/<%- cart.product?.img[0]%>" alt="Product image">
+                          <img src="product-images/<%- cart.product?._id%>0.jpg" alt="Product image">
                         </a>
                       </figure>
 
@@ -40,27 +40,27 @@
                       </h3><!-- End .product-title -->
                     </div><!-- End .product -->
                   </td>
-                  <td class="price-col">₹<%-cart.product?.price %>
+                  <td class="price-col">₹<%-cart.product?.offerPrice %>
                   </td>
                   <td class="quantity-col">
                     <div class="cart-product-quantity" style="display:flex;">
 
 
-                      <button style="min-width:26;" class="btn btn-decrement btn-spinner" <%if(cart.quantity<2){%>disabled<%} %> id="decrement" onclick="changeQuantity('<%-cart._id%>','<%-cart.product?._id%>',-1,this.parentElement.querySelector('input'),'<%-cart.product?.price %>','<%-cart?.product?.quantity%>')" type="button">
+                      <button style="min-width:26;" class="btn btn-decrement btn-spinner" <%if(cart.quantity<2){%>disabled<%} %> id="decrement" onclick="changeQuantity('<%-cart._id%>','<%-cart.product?._id%>',-1,this.parentElement.querySelector('input'),'<%-cart.product?.offerPrice %>','<%-cart?.product?.quantity%>')" type="button">
                         <i class="icon-minus"></i>
                       </button>
 
 
                       <input type="text" disabled="disabled" style="text-align:center;" class="border-0 form-control" value="<%-cart.quantity%>" min="1" step="1" data-decimals="0">
 
-                      <button id="plusBtn" style="min-width:26;" class="btn btn-increment btn-spinner"onclick="changeQuantity('<%-cart._id%>','<%-cart.product?._id%>',1,this.parentElement.querySelector('input'),'<%-cart.product?.price %>','<%-cart?.product?.quantity%>')" type="button">
+                      <button id="plusBtn" style="min-width:26;" class="btn btn-increment btn-spinner" onclick="changeQuantity('<%-cart._id%>','<%-cart.product?._id%>',1,this.parentElement.querySelector('input'),'<%-cart.product?.offerPrice %>','<%-cart?.product?.quantity%>')" type="button">
                         <i class="icon-plus"></i>
                       </button>
 
                     </div><!-- End .cart-product-quantity -->
                   </td>
                   <td id="singleItemTotal" class="total-col">₹
-                    <%-cart.product?.price*cart.quantity%>
+                    <%-cart.product?.offerPrice*cart.quantity%>
                   </td>
                   <td class="remove-col"><button onclick="removeItem('<%-cart._id%>','<%-cart.product?._id%>')" class="btn-remove"><i class="icon-close"></i></button></td>
                   <td id="outOfStock" class="text-danger"></td>
@@ -151,7 +151,7 @@
                 </tbody>
               </table><!-- End .table table-summary -->
               <% let value = 0 %>
-              <a <% cartItems?.forEach((element,index)=>{ %> <% if(element?.product.quantity==0 || element?.product?.quantity - element?.quantity < 0) {%> onclick="toastOutOfStock()" <% } else { %> <% value += 1 %> <% } %> <% if(value==cartItems.length){ %> href='/checkout' <% } %> <% }) %> class="btn btn-outline-primary-2 btn-order btn-block">
+              <a <% cartItems?.forEach((element,index)=>{ %> <% if(element?.product?.quantity==0 || element?.product?.quantity - element?.quantity < 0) {%> onclick="toastOutOfStock()" <% } else { %> <% value += 1 %> <% } %> <% if(value==cartItems?.length){ %> href='/checkout' <% } %> <% }) %> class="btn btn-outline-primary-2 btn-order btn-block">
                 PROCEED TO CHECKOUT</a>
             </div><!-- End .summary -->
 
@@ -265,5 +265,4 @@
       }
     })
   }
-
 </script>
