--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -38,9 +38,9 @@
           <div class="col-6 col-md-4 col-lg-4 col-xl-3">
             <div class="product">
               <figure class="product-media">
-                <span class="product-label label-sale">30% off</span>
+                <span class="product-label label-sale"><%- products.percent%>% off</span>
                 <a href="/product/<%- products._id%>">
-                  <img src="/product-images/<%= products.img[0]%>" alt="Product image" class="product-image">
+                  <img src="/product-images/<%= products._id%>0.jpg" alt="Product image" class="product-image">
                 </a>
 
                 <div class="product-action-vertical">
@@ -65,7 +65,7 @@
                   </a></h3><!-- End .product-title -->
                 <div class="product-price">
                   <strike class="text-danger"><span class="new-price">₹<%- products.marketPrice %></span></strike>
-                  <span class="old-price">₹<%- products.price %></span>
+                  <span class="old-price">₹<%- products.offerPrice %></span>
                 </div><!-- End .product-price -->
                 <div class="ratings-container">
                   <div class="ratings">
